Update to Classes and structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(Lab_12___Hash_Table)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Lab_12___Hash_Table
-    main.cpp)
+    main.cpp
+        Professor_Catalog.h
+        Professor_Catalog.cpp)
