Update Student_Registration.cpp & Menu & Search

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable(Lab_12___Hash_Table
     main.cpp
         Professor_Catalog.h
-        Professor_Catalog.cpp)
+        Professor_Catalog.cpp
+        Student_Registration.h)
